2010-12-27 nicolas.dumazet
* Fix list method on portal_property_sheets view

2010-12-13 nicolas.dumazet
* Add Tool portal types for Tools added through ERP5Site.manage_addERP5Site

2010-12-07 arnaud.fontaine
* Add portal_property_sheets to the Tools.

2010-12-07 arnaud.fontaine
* Modify dynamic_class_generation_interaction_workflow to reset the dynamic modules when calling setTypePropertySheetList().
* Fix description of Constraints portal types for ZODB Property Sheets.

2010-12-06 nicolas.dumazet
* rename Synchronisation Tool to Synchronization Tool for consistency
* fix type classes on tool portal types

2010-12-01 arnaud.fontaine
* Add Property Type Validity Constraint portal type and its view for ZODB Property Sheets.

2010-11-30 arnaud.fontaine
* Add Transaction Quantity Value Validity Constraint portal type and its view for ZODB Property Sheets.

2010-11-30 arnaud.fontaine
* Add Transaction Quantity Value Feasability Constraint portal type and its view.

2010-11-30 arnaud.fontaine
* Add Trade Model Line Cell Consistency Constraint portal type and its view.

2010-11-30 arnaud.fontaine
* Add Resource Measures Consistency Constraint portal type and its view.

2010-11-30 arnaud.fontaine
* Add Accounting Transaction Balance Constraint portal type and its view.

2010-11-29 arnaud.fontaine
* Add TALES Constraint portal type and its view.

2010-11-29 arnaud.fontaine
* Add Category Related Acquired Membership Arity Constraint portal type and its view.

2010-11-29 arnaud.fontaine
* Add Category Acquired Membership Arity Constraint portal type.

2010-11-26 arnaud.fontaine
* Add Category Membership Arity Constraint portal type and its views.
* Add missing form action to ZODB Constraints.

2010-11-26 arnaud.fontaine
* Add Content Existence Constraint portal type and its views.

2010-11-25 arnaud.fontaine
* Reset the dynamic documents at the end of the transaction.
* Merge BaseCategory_resetDynamicClasses into ChangeProperty_resetDynamicClasses.
