@@ -119,6 +119,7 @@
                         <string>my_string_index</string>
                         <string>my_int_index</string>
                         <string>my_test_method_id</string>
+                        <string>my_test_tales_expression</string>
                       </list>
                     </value>
                 </item>
