@@ -1,3 +1,6 @@
+2010-12-28 nicolas.dumazet
+* add test_tales_expression field to Predicate_view
+
 2010-12-27 nicolas.dumazet
 * Fix list method on portal_property_sheets view
 
